syntax = "proto3";
package service_auth;
option go_package = "protos/;service_auth";

service ServiceAuth {
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc RefreshAccessToken(RefreshAccessTokenRequest) returns (RefreshAccessTokenResponse);
  rpc Logout(LogoutRequest) returns (LogoutResponse);
  rpc VerifyRegister(VerifyRegisterRequest )returns (VerifyRegisterResponse);
  rpc GetLoginHistories(GetLoginHistoriesRequest) returns (GetLoginHistoriesResponse);
}

message LoginRequest{
  string email = 1;
  string password = 2;
  string device_id = 3;
}

message LoginResponse{
  string email = 1;
  string username = 2;
  string active_access_token = 3;
  string status = 4;
  string error = 5;
}

message RegisterRequest{
  string email = 1;
  string password = 2;
  string confirm_password = 3;
}

message RegisterResponse{
  string email = 1;
  string status = 2;
  string error = 3;
}

message RefreshAccessTokenRequest{
  string email = 1;
  string device_id = 2;
  string active_access_token = 3;
}

message RefreshAccessTokenResponse{
  string active_access_token = 1;
  string status = 2;
  string error = 3;
}

message LogoutRequest{
  string email = 1;
  string active_access_token = 3;
}

message LogoutResponse{
  string status = 1;
  string error = 2;
}


message VerifyRegisterRequest{
  string email = 1;
  string activate_key = 3;
}

message VerifyRegisterResponse{
  string email = 1;
  string activate_key = 3;
}

message GetLoginHistoriesRequest{
  int32 Limit = 1;
  int64 Page = 2;
}

message GetLoginHistoriesResponse{
  message Data {
    string email = 1;
    string username = 2;
    string device_id = 3;
    string login_at = 4;
  }

  repeated Data data = 1;
  string status = 2;
  string error = 3;
}


